# test

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
P2/: pnpm-lock.yaml  pnpm-workspace.yaml
P2/p2/: package.json  pnpm-lock.yaml
P2/p2/src/: App.vue  main.ts
P2/p2/src-tauri/: Cargo.toml  tauri.conf.json
P2/p2/src-tauri/src/: main.rs
plugins/debug/debug-plugin/: Cargo.toml
plugins/debug/debug-plugin/src/: lib.rs
plugins/debug/debug-ui/: package.json  pnpm-lock.yaml  rsbuild.config.ts
plugins/debug/debug-ui/src/: App.vue
plugins/icons/src/: lib.rs
rust/: .env  Cargo.toml
rust/START/: Cargo.toml
rust/START/plugin/: Cargo.toml
rust/START/plugin-manager/: Cargo.toml  build.rs
rust/START/plugin-manager/examples/: client.rs
rust/START/plugin-manager/proto/: plugin.proto
rust/START/plugin-manager/src/: lib.rs  main.rs  proto.rs  server.rs
rust/START/plugin-manager/src/plugin/: manager.rs  mod.rs
rust/START/plugin/src/: lib.rs  model.rs  type_call.rs
rust/START/plugins/plugin-adb-connect/: Cargo.toml
rust/START/plugins/plugin-adb-connect/examples/: generate_dll.rs  generate_json.rs
rust/START/plugins/plugin-adb-connect/src/: adb.rs  lib.rs
rust/app/: Cargo.toml  build.rs
rust/app/src/: main.rs
rust/app/src/bridge/: bridge.rs  mod.rs  mode.rs
rust/app/src/plugin/: mod.rs  scan.rs
rust/appdev/: Cargo.toml
rust/appdev/src/: main.rs
rust/axum_graphql/: Cargo.toml
rust/axum_graphql/migrations/: 20250905021126_creat_users.down.sql  20250905021126_creat_users.up.sql
rust/axum_graphql/src/: data.rs  graphql.http  lib.rs  main.rs
rust/axum_graphql/src/db/: data.rs  datac.rs  mod.rs
rust/git-graph-web/: Cargo.toml
rust/git-graph-web/src/: lib.rs  main.rs
rust/jni-noise-detector/: Cargo.toml  build.rs
rust/jni-noise-detector/src/: detector.rs  lib.rs
rust/loading/: Cargo.toml
rust/loading/examples/: currdir.rs  dllload.rs
rust/loading/src/: lib.rs
rust/message/: Cargo.toml
rust/message/src/: lib.rs
rust/plugin/: Cargo.toml
rust/plugin-macro/: Cargo.toml
rust/plugin-macro/src/: lib.rs
rust/plugin-manager/src/: err.rs  manager.rs
rust/plugin/plugin/: Cargo.toml
rust/plugin/plugin-macro/src/: dispatch.rs  export.rs  fromvalue.rs  lib.rs
rust/plugin/plugin-manager/: Cargo.toml
rust/plugin/plugin-manager/src/: manager.rs
rust/plugin/plugin/src/: lib.rs  plugin.rs  prelude.rs
rust/plugin/plugin_aaa/: Cargo.toml
rust/plugin/plugin_aaa/src/: lib.rs
rust/plugin/plugin_interface/src/: lib.rs
rust/plugin/plugin_manager/: Cargo.toml
rust/plugin/plugin_manager/src/: lib.rs
rust/plugin/src/: lib.rs  plugin.rs
rust/plugin/value/src/: lib.rs
rust/plugin_fn/: readme.md
rust/plugin_fn/plugin_aaa/src/: lib.rs
rust/plugin_fn/plugin_interface/: Cargo.toml
rust/plugin_fn/plugin_interface/src/: lib.rs
rust/plugin_fn/plugin_manager/src/: lib.rs
rust/plugin_fn/pluginf_aaa/: Cargo.toml
rust/plugin_fn/pluginf_aaa/src/: lib.rs
rust/plugin_fn/pluginf_interface/: Cargo.toml
rust/plugin_fn/pluginf_interface/src/: lib.rs
rust/plugin_fn/pluginf_manager/: Cargo.toml
rust/plugin_fn/pluginf_manager/src/: lib.rs
rust/plugin_router/pluginr_aaa/: Cargo.toml
rust/plugin_router/pluginr_aaa/src/: lib.rs
rust/plugin_router/pluginr_interface/: Cargo.toml
rust/plugin_router/pluginr_interface/src/: lib.rs  resp.rs
rust/plugin_router/pluginr_manager/: Cargo.toml
rust/plugin_router/pluginr_manager/src/: lib.rs  main.rs  netlog.rs  scan.rs
rust/plugins/icons/: Cargo.toml
rust/plugins/icons/src/: lib.rs
rust/search/: Cargo.toml
rust/search/src/: lib.rs
rust/tauri_impl/: Cargo.toml
rust/tauri_impl/page/: index.html
rust/tauri_impl/src/: main.rs
rust/tonic-api/: Cargo.toml  build.rs
rust/tonic-api/examples/: client_test.rs
rust/tonic-api/proto/: echo.proto
rust/tonic-api/src/: main.rs  server.rs
rust/value/src/: num.rs  value.rs
rust/wasm_appdev/: Cargo.toml
rust/wasm_appdev/src/: lib.rs
rust/window/: Cargo.toml
rust/window/src/: cmd.rs  event.rs  lib.rs  script.rs  wm.rs
rust/window/window/: Cargo.toml
rust/window/window-generate/: Cargo.toml
rust/window/window-generate/src/: lib.rs
rust/window/window-macro/: Cargo.toml
rust/window/window-macro/src/: lib.rs
rust/window/window/src/: cmd.rs  event.rs  lib.rs  macros.rs  script.rs  wm.rs
test_math/: Cargo.toml
test_math/src/: search.rs
testpy_net/: .gitignore  abogus.js  blbl.py  douyin.py  kuaishou.py  requirements.txt  test.py  video_detail.graphql  wallpapaer.py  xiaohongsu.py
testrs_libloading/: Cargo.toml
testrs_libloading/p2/: Cargo.toml
testrs_libloading/p2/src/: main.rs  result.rs
testrs_libloading/plugin_adb/: Cargo.toml
testrs_libloading/plugin_adb/src/: lib.rs
testrs_libloading/plugin_interface/: Cargo.toml
testrs_libloading/plugin_interface/src/: lib.rs
testrs_libloading/plugin_interface/src/plugin/: app.rs  mod.rs  plugin.rs  result.rs
testrs_net/: Cargo.toml
testrs_net/src/: main.rs
testrs_net/static/: TestRemote.vue  a.json  index.html
testvue_loadvue/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
testvue_loadvue/src/: App.vue
testvue_loadvue/src/components/: TestRemote.vue
testvue_loadvue/src/lib/: loadremote.ts  vue3-sfc-loader.d.ts
vue/app/: package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
vue/app/src/: App.vue  global.ts  index.css  index.ts  types.ts
vue/app/src/components/: EmptyState.vue  ErrorDisplay.vue  Loadingbar.vue  LogoVue.vue  NaviVue.vue  SettingVue.vue  WindowHeaderVue.vue
vue/app/src/generate/: bridge.ts
vue/app/src/utils/: useAsync.ts
vue/app/src/vue/app/src/generate/: bridge.ts
vue/appdev/: package-lock.json  package.json  vite-plugin-build-wasm.ts  vite.config.ts
vue/appdev/src/: App.vue
