[workspace]
resolver = "3"
members = [
    "appdev",
    "axum_graphql",
    "loading",
    "plugin_fn/pluginf_aaa",
    "plugin_fn/pluginf_interface",
    "plugin_fn/pluginf_manager",
    "plugin_router/pluginr_aaa",
    "plugin_router/pluginr_interface",
    "plugin_router/pluginr_manager",
    "search",
    "tauri_impl",
    "wasm_appdev",
]
