[package]
name = "testrs_net"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46", features = ["full"] }
tower-http = { version = "0.6", features = ["fs","cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
