[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
plugin = { path = "../plugin" }
plugin-manager = { path = "../plugin-manager" }
plugin-macro = { path = "../plugin-macro" }

tokio = { version = "1", features = ["full"] }
