[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
plugin = { path = "../plugin/plugin" }
plugin-manager = { path = "../plugin/plugin-manager" }
window = { path = "../window/window" }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"


[build-dependencies]
window-generate = { path = "../window/window-generate" }
glob = "0.3"
