[package]
name = "git-graph-web"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon", features = [
    "logfile_default",
] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
