[package]
name = "jni-noise-detector"
version = "0.1.0"
edition = "2024"

[lib]
name = "amplitude_noise_detector"
crate-type = ["cdylib"]

[dependencies]
cargo-ndk = "4.1.2"
jni = "0.21"
libc = "0.2"
log = "0.4"
android_logger = "0.15"


[build-dependencies]
cc = "1.2"

[profile.release]
panic = "abort"
