[package]
name = "tauri_impl"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.34"
wry = "0.53"
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
tokio = { version = "1.47", features = ["full"] }
axum = "0.8"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
