[package]
name = "tonic-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libcommon = { git = "https://github.com/munch1182/p2.git", package = "libcommon", features = [
    "logfile_default",
] }
tokio-stream = "0.1.18"
chrono = "0.4.43"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14"
