[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", package = "libcommon", features = [
    "logfile",
] }
libloading = "0.9"
plugin = { path = "../plugin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sha256 = "1.6"
