[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2024"

[dependencies]

plugin = { path = "../plugin" }

libloading = "0.9"

libcommon = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }

async-trait = { workspace = true }

async-stream = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

sha256 = "1.6"
dashmap = "6.1"

tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tonic-web = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }


[build-dependencies]
tonic-prost-build = { workspace = true }
