[package]
name = "pluginr_aaa"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pluginr_interface = { path = "../pluginr_interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
axum = "0.8"
