[package]
name = "pluginr_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
libloading = "0.8"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
