[package]
name = "pluginr_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
pluginr_interface = { path = "../pluginr_interface" }
tower = "0.5"
hyper = "1.7"
futures = "0.3"
http-body-util = "0.1"
