[package]
name = "icons"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin = { path = "../../plugin" }
plugin-macro = { path = "../../plugin-macro" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
