[package]
name = "plugin-adb-connect"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugin = { path = "../../plugin" }
libcommon = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tonic = { workspace = true }

tokio-stream = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }

futures-timer = "3.0"
